--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@asterai/cli",
   "description": "CLI for building and deploying asterai plugins",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "author": "asterai <support@asterai.io>",
   "repository": "asterai-io/asterai-sdk",
   "homepage": "https://github.com/asterai-io/asterai-sdk",
@@ -51,6 +51,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@asterai/as-proto-gen": "^1.4.1",
+    "@asterai/client": "^0.1.1",
     "@oclif/core": "^3",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
@@ -59,7 +60,8 @@
     "form-data": "^4.0.0",
     "mustache": "^4.2.0",
     "protobufjs": "^7.4.0",
-    "protobufjs-cli": "^1.1.3"
+    "protobufjs-cli": "^1.1.3",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
