--- a/cli/asterai-init-plugin/package.json
+++ b/cli/asterai-init-plugin/package.json
@@ -6,12 +6,16 @@
   "license": "UNLICENSED",
   "scripts": {
     "auth": "asterai auth",
-    "pkg": "asterai pkg",
+    "pkg": "asterai pkg -o build/package.wasm",
+    "typegen": "jco types build/package.full.wit -n plugin -o typegen/",
+    "build": "tsc && wasm-tools component wit ./build/package.wasm -o build/package.full.wit && jco componentize build/plugin.js -w build/package.full.wit -n plugin -o build/plugin.wasm",
     "deploy": "asterai deploy"
   },
   "type": "module",
   "devDependencies": {
     "@asterai/cli": "latest",
-    "@asterai/sdk": "latest"
+    "@asterai/sdk": "latest",
+    "@bytecodealliance/jco": "^1.9.1",
+    "typescript": "^5.7.3"
   }
 }
