--- a/cli/asterai-init-plugin/tsconfig.json
+++ b/cli/asterai-init-plugin/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "assemblyscript/std/assembly.json",
-  "include": ["./**/*.ts"]
+  "include": ["./**/*.ts"],
+  "compilerOptions": {
+    "outDir": "build",
+    "module": "ESNext"
+  }
 }
