--- a/cli/asterai-init-plugin/package.json
+++ b/cli/asterai-init-plugin/package.json
@@ -6,9 +6,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "auth": "asterai auth",
-    "pkg": "mkdirp build && asterai pkg -o build/package.wasm",
+    "pkg": "mkdirp build && asterai pkg -o build/package.wasm && wasm-tools component wit ./build/package.wasm -o build/package.full.wit",
     "typegen": "jco types build/package.full.wit -n plugin -o typegen/",
-    "build": "tsc && wasm-tools component wit ./build/package.wasm -o build/package.full.wit && jco componentize build/plugin.js -w build/package.full.wit -n plugin -o build/plugin.wasm",
+    "build": "tsc && jco componentize build/plugin.js -w build/package.full.wit -n plugin -o build/plugin.wasm",
     "deploy": "asterai deploy"
   },
   "type": "module",
