chore: update init example

--- a/cli/asterai-init-plugin/package.json
+++ b/cli/asterai-init-plugin/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "author": "",
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
     "auth": "asterai auth",
-    "pkg": "mkdirp build && asterai pkg -o build/package.wasm && wasm-tools component wit ./build/package.wasm -o build/package.full.wit",
-    "typegen": "jco types build/package.full.wit -n plugin -o typegen/",
-    "build": "tsc && jco componentize build/plugin.js -w build/package.full.wit -n plugin -o build/plugin.wasm",
+    "gen:pkg": "mkdirp build && asterai_local pkg -o build/package.wasm -w build/package.wit -e http://localhost:3003",
+    "gen:types": "jco guest-types build/package.wit -n plugin -o generated/",
+    "compile": "tsc",
+    "componentize": "jco componentize build/plugin.js -w build/package.wit -n plugin -o build/plugin.wasm",
+    "build": "run-s gen:pkg gen:types compile componentize",
     "deploy": "asterai deploy"
   },
-  "type": "module",
   "devDependencies": {
     "@asterai/cli": "latest",
     "@asterai/sdk": "latest",
     "@bytecodealliance/jco": "^1.9.1",
+    "@types/node": "^22.13.4",
     "mkdirp": "^3.0.1",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.7.3"
   }
 }
