--- a/cli/asterai-init-plugin/tsconfig.json
+++ b/cli/asterai-init-plugin/tsconfig.json
@@ -2,6 +2,10 @@
   "include": ["./**/*.ts"],
   "compilerOptions": {
     "outDir": "build",
-    "module": "ESNext"
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "paths": {
+      "asterai:host/api@0.1.0": ["./generated/interfaces/asterai-host-api.d.ts"]
+    }
   }
 }
