chore: remove local command

--- a/cli/asterai-init-plugin/package.json
+++ b/cli/asterai-init-plugin/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "auth": "asterai auth",
-    "gen:pkg": "mkdirp build && asterai_local pkg -o build/package.wasm -w build/package.wit -e http://localhost:3003",
+    "gen:pkg": "mkdirp build && asterai pkg -o build/package.wasm -w build/package.wit",
     "gen:types": "jco guest-types build/package.wit -n plugin -o generated/",
     "compile": "tsc",
     "componentize": "jco componentize build/plugin.js -w build/package.wit -n plugin -o build/plugin.wasm",
