--- a/cli/package.json
+++ b/cli/package.json
@@ -36,7 +36,7 @@
     "/bin",
     "/dist",
     "/oclif.manifest.json",
-    "/asterai-init-plugin"
+    "/init/typescript"
   ],
   "oclif": {
     "bin": "asterai",
