chore: ignore build files in ts init

--- a/cli/package.json
+++ b/cli/package.json
@@ -40,7 +40,11 @@
     "/init/rust/.gitignore",
     "/init/typescript/.gitignore",
     "!/init/rust/target",
-    "!/init/rust/Cargo.lock"
+    "!/init/rust/Cargo.lock",
+    "!/init/typescript/build",
+    "!/init/typescript/node_modules",
+    "!/init/typescript/generated",
+    "!/init/typescript/pnpm-lock.yaml"
   ],
   "oclif": {
     "bin": "asterai",
