fix: update jco to fix typegen in typescript init

--- a/cli/init/typescript/tsconfig.json
+++ b/cli/init/typescript/tsconfig.json
@@ -3,9 +3,6 @@
   "compilerOptions": {
     "outDir": "build",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "paths": {
-      "asterai:host/api@0.1.0": ["./generated/interfaces/asterai-host-api.d.ts"]
-    }
+    "moduleResolution": "node"
   }
 }
